@@ -1,3 +1,5 @@
+2006/8/22 -- released version 20060822_trunk
+
 2006/8/21 -- released version 20060821_trunk
 
 2006/8/20 -- released version 20060820_trunk
